# COMTRADE-reader

./: README.md  oscillograms.7z
COMTRADE_reader/: CMakeLists.txt  Comtrade.h  DirectoryMonitor.cpp  DirectoryMonitor.h  InputReader.cpp  InputReader.h  main.cpp
COMTRADE_reader/src/: Comtrade.cpp  DirectoryMonitor.cpp  DirectoryMonitor.h  InputReader.cpp  InputReader.h  main.cpp
comtrade_cmake_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ComtradeReader.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  comtrade.vcxproj  comtrade.vcxproj.filters
comtrade_cmake_build/comtrade.dir/Debug/: comtrade.exe.recipe
comtrade_cmake_build/comtrade.dir/Debug/comtrade.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
comtrade_cmake_build/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
comtrade_cmake_build/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
comtrade_cmake_build/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
comtrade_cmake_build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
oscillograms/Филиал/РЭС/ПС/ASCII/: Осциллограмма_Сириус.cfg.comtrade.1991.cfg  Осциллограмма_Сириус.cfg.comtrade.1999cfg.cfg  Осциллограмма_Сириус.cfg.comtrade.2013.cff  Осциллограмма_Сириус.cfg.comtrade.2013.cfg
